Top stream in front page and thumbnails disappear when log out

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -29,3 +29,12 @@ button:hover {
 #logout {
     margin-top: 30px;
 }
+
+/*****CONTENT*****/
+#index {
+    text-align: center;
+}
+
+#player iframe {
+    max-height: 500px;
+}
