--- a/app/views/partial/thumbnail.html
+++ b/app/views/partial/thumbnail.html
@@ -1,9 +1,9 @@
 <img ng-src="{{ stream.preview.large }}" class="img-responsive thumbnail"/>
-<p class="channel"><a href="https://www.twitch.tv/{{ stream.channel.name }}" target="_blank">{{ stream.channel.name }}</a></p>
+<p ng-click="$event.stopPropagation()" class="channel"><a href="https://www.twitch.tv/{{ stream.channel.name }}" target="_blank">{{ stream.channel.name }}</a></p>
 <p class="viewers">{{ stream.viewers }} <i class="fa fa-users" style="color: #6441a5"></i><p>
 <div class="info">
     <p class="status" title="{{ stream.channel.status }}">{{ stream.channel.status }}</p>
-    <p>
+    <p ng-click="$event.stopPropagation()" >
         <a target="_blank" href="https://www.twitch.tv/directory/game/{{ stream.game }}">{{ stream.game}}</a>
     </p>
 </div>
